--- a/Backend/Config-Service/src/main/resources/application.properties
+++ b/Backend/Config-Service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Config-Service
+
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
+# Spring Cloud Config Server Setup
+spring.cloud.config.server.git.uri=https://github.com/your-username/config-repo
+spring.cloud.config.server.git.default-label=main
+
+# If you want to use a local Git repository
+# spring.cloud.config.server.git.uri=file:///path/to/your/config-repo
+
+# Optional: Authenticate if using a private Git repo
+# spring.cloud.config.server.git.username=your-git-username
+# spring.cloud.config.server.git.password=your-git-password
