--- a/Backend/User-Service/pom.xml
+++ b/Backend/User-Service/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>user_service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>user_service</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
