--- a/Backend/chat-app-backend/pom.xml
+++ b/Backend/chat-app-backend/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>message_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>message_service</name>
+	<description>chat app project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
