--- a/Backend/Config-Service/src/main/resources/application.properties
+++ b/Backend/Config-Service/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=Config-Service
+server.port=8088
 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
 # Spring Cloud Config Server Setup
-spring.cloud.config.server.git.uri=https://github.com/your-username/config-repo
-spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.uri=https://github.com/padmanavtripathy/Chat-APP
+spring.cloud.config.server.git.search-paths=configuration
+spring.cloud.config.server.git.default-label=master
 
 # If you want to use a local Git repository
 # spring.cloud.config.server.git.uri=file:///path/to/your/config-repo
