--- a/configuration/user_service.properties
+++ b/configuration/user_service.properties
@@ -1,5 +1,6 @@
-spring.application.name=chat_service
-server.port=8083
+spring.application.name=user_service
+
+server.port=8081
 
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
 
