--- a/configuration/chat_service.properties
+++ b/configuration/chat_service.properties
@@ -1,6 +1,5 @@
-spring.application.name=user_service
-
-server.port=8081
+spring.application.name=chat_service
+server.port=8083
 
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
 
