--- a/Backend/ChatAppEmailService/src/main/resources/application.properties
+++ b/Backend/ChatAppEmailService/src/main/resources/application.properties
@@ -1,23 +1,38 @@
+# 1) Identify this service
 spring.application.name=email_service
 server.port=8082
 
-#Database Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+# 2) Import config from the Config Server (via Eureka discovery)
+spring.config.import=optional:configserver:
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=Config-Service
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#spring.application.name=email_service
+#server.port=8082
+#
+##Database Configuration
+#spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+#
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#
+#
+##Email ConFiguration
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=padmanavtripathy145@gmail.com
+#spring.mail.password=vkhawgzfljakqnwf
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#
+##Static Content
+#app.email.otpLength=6
+#app.email.sender=donotreplay@gmail.com
+#app.email.otpSubject=OTP Request From Chat APP
+#app.email.emailDetails=emaildetails
+#app.email.validity=300
 
 
-#Email ConFiguration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=padmanavtripathy145@gmail.com
-spring.mail.password=vkhawgzfljakqnwf
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-#Static Content
-app.email.otpLength=6
-app.email.sender=donotreplay@gmail.com
-app.email.otpSubject=OTP Request From Chat APP
-app.email.emailDetails=emaildetails
-app.email.validity=300
+# 3) Register with Eureka (so other services can find you)
+#eureka.client.service-url.defaultZone=http://host.docker.internal:8761/eureka/
+#eureka.instance.prefer-ip-address=true
