--- a/Backend/chat-app-backend/src/main/resources/application.properties
+++ b/Backend/chat-app-backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=chat_service
 server.port=8083
 
-spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+# 2) Import config from the Config Server (via Eureka discovery)
+spring.config.import=optional:configserver:
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=Config-Service
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+#
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
