--- a/configuration/user_service.properties
+++ b/configuration/user_service.properties
@@ -2,6 +2,7 @@ spring.application.name=user_service
 
 server.port=8081
 
+#Database Configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
