changed service name

--- a/Backend/ChatAppEmailService/src/main/resources/application.properties
+++ b/Backend/ChatAppEmailService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 1) Identify this service
-spring.application.name=email_service
+spring.application.name=email-service
 server.port=8082
 
 # 2) Import config from the Config Server (via Eureka discovery)
