--- a/Backend/chat-app-backend/src/main/resources/application.properties
+++ b/Backend/chat-app-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=chat_service
+spring.application.name=chat-service
 server.port=8083
 
 # 2) Import config from the Config Server (via Eureka discovery)
