--- a/configuration/chat_service.properties
+++ b/configuration/chat_service.properties
@@ -1,4 +1,4 @@
-spring.application.name=chat_service
+spring.application.name=chat-service
 server.port=8083
 
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
